src/styling/about.css
@import "./theme.css";
@import "./fonts.css";
.about-me {
  /* background-color: var(--ocean-color); */
}

.am-container p {
  padding: 10px 0px 10px 0px;
  margin: 0 25% 0 25%;
}
.scroll {
  overflow: hidden;
  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
  padding-top: 10vh;
}
#img-track {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  gap: 10px;
  flex-wrap: nowrap;
  animation: scroll 60s linear infinite;
  width: max-content;
}
#img-track .image {
  width: 100%;
  height: 44vmin;
  object-fit: cover;
  object-position: center;
  border-radius: 10px;
  max-width: max-content;
}

@keyframes scroll {
  to {
    transform: translate(calc(-50% - 0.5px));
  }
}

